fixed scrollbar problem
Fixed giant scrollbar problem

--- a/app/modelcreator/ubm/www/css/index.css
+++ b/app/modelcreator/ubm/www/css/index.css
@@ -73,3 +73,6 @@
     display:block;
 }
 .click_pointer { cursor: pointer; cursor: hand; }
+::-webkit-scrollbar { 
+    display: none; 
+}
